--- a/advertisement_management/src/main/resources/templates/topbar.html
+++ b/advertisement_management/src/main/resources/templates/topbar.html
@@ -181,22 +181,22 @@
         <!-- Dropdown - User Information -->
         <div class="dropdown-menu dropdown-menu-right shadow animated--grow-in"
              aria-labelledby="userDropdown">
-          <a class="dropdown-item" href="#">
-            <i class="fas fa-user fa-sm fa-fw mr-2 text-gray-400"></i>
-            Profile
-          </a>
-          <a class="dropdown-item" href="#">
+          <!--                                <a class="dropdown-item" href="#">-->
+          <!--                                    <i class="fas fa-user fa-sm fa-fw mr-2 text-gray-400"></i>-->
+          <!--                                    Profile-->
+          <!--                                </a>-->
+          <a class="dropdown-item" href="#" data-toggle="modal" data-target="#modifyPassword">
             <i class="fas fa-cogs fa-sm fa-fw mr-2 text-gray-400"></i>
-            Settings
+            修改密码
           </a>
-          <a class="dropdown-item" href="#">
-            <i class="fas fa-list fa-sm fa-fw mr-2 text-gray-400"></i>
-            Activity Log
-          </a>
+          <!--                                <a class="dropdown-item" href="#">-->
+          <!--                                    <i class="fas fa-list fa-sm fa-fw mr-2 text-gray-400"></i>-->
+          <!--                                    Activity Log-->
+          <!--                                </a>-->
           <div class="dropdown-divider"></div>
           <a class="dropdown-item" href="#" data-toggle="modal" data-target="#logoutModal">
             <i class="fas fa-sign-out-alt fa-sm fa-fw mr-2 text-gray-400"></i>
-            Logout
+            登出
           </a>
         </div>
       </li>
@@ -205,4 +205,87 @@
 
   </nav>
 <!-- End of Topbar -->
+  <!-- Logout Modal-->
+  <div class="modal fade" id="logoutModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
+       aria-hidden="true">
+    <div class="modal-dialog" role="document">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title" id="exampleModalLabel">确定要登出吗？</h5>
+          <button class="close" type="button" data-dismiss="modal" aria-label="Close">
+            <span aria-hidden="true">×</span>
+          </button>
+        </div>
+        <div class="modal-body">我们会想念你的</div>
+        <div class="modal-footer">
+          <button class="btn btn-secondary" type="button" data-dismiss="modal">取消</button>
+          <a class="btn btn-primary" th:href="@{/auth/logout}">登出</a>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <!--修改password model-->
+  <div class="modal fade" id="modifyPassword" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
+       aria-hidden="true">
+    <div class="modal-dialog" role="document">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title" id="passwordModalLabel">修改密码</h5>
+          <button class="close" type="button" data-dismiss="modal" aria-label="Close">
+            <span aria-hidden="true">×</span>
+          </button>
+        </div>
+        <form class="password"
+              onsubmit="changePassword(event)">
+          <div class="form-group">
+            <input type="password"
+                   class="form-control form-control-user"
+                   name="password"
+                   id="examplePassword" aria-describedby="emailHelp"
+                   placeholder="请输入密码">
+          </div>
+          <div class="form-group">
+            <input type="password" class="form-control form-control-user"
+                   id="exampleRePassword" placeholder="请确认密码">
+          </div>
+          <button type="submit" class="btn btn-primary btn-user btn-block">
+            确定
+          </button>
+          <hr>
+        </form>
+      </div>
+    </div>
+  </div>
+  <script>
+    function changePassword(event) {
+      event.preventDefault()
+      const password = document.getElementById("examplePassword").value;
+      const rePassword = document.getElementById("exampleRePassword").value;
+      if (password !== rePassword) {
+        alert("两次输入的密码不一致");
+      }
+      else{
+        fetch(`/user/password/me`, {
+          method: 'POST',
+          headers: {
+            'Content-Type': 'application/json'
+          },
+          body: JSON.stringify({password: password}),
+        })
+          .then(async response => {
+            response = JSON.parse(await response.text());
+            if (response.code === 200) {
+              location.reload(); // 删除成功后刷新页面
+            } else {
+              alert(`${response.message}`);
+            }
+          })
+          .catch(error => {
+            console.error('Error:', error);
+            alert('请求失败');
+          });
+      }
+    }
+  </script>
 </div>
