--- a/advertisement_management/src/main/resources/templates/advertisements.html
+++ b/advertisement_management/src/main/resources/templates/advertisements.html
@@ -13,7 +13,7 @@
   <h2>Create Advertisement</h2>
   <form id="createAdForm" enctype="multipart/form-data">
     <input type="text" id="adTitle" name="adName" placeholder="Title" required>
-    <input type="file" id="adImage" name="adImage" accept="image/*" required>
+    <input type="file" id="adImage" name="adImages" accept="image/*" multiple required>
     <input type="text" id="adFeature" name="adFeature" placeholder="Feature" required>
     <button type="submit">Create</button>
   </form>
