--- a/advertisement_management/src/main/resources/templates/edit.html
+++ b/advertisement_management/src/main/resources/templates/edit.html
@@ -19,11 +19,11 @@
         <input type="text" id="adFeature" name="adFeature" placeholder="Feature" required>
     </form>
 
-    <form name="mdEditorForm">
-        标题:<input type="text" name="title"><br>
-        作者:<input type="text" name="author">
+    <form id="mdEditorForm" name="mdEditorForm">
+        标题:<input type="text" id="title" name="title"><br>
+        作者:<input type="text" id="author" name="author">
         <div id="test-editormd">
-            <textarea style="display:none;" name="content"></textarea>
+            <textarea style="display:none;" id="content" name="content"></textarea>
         </div>
     </form>
     <!-- Submit Button -->
@@ -54,41 +54,85 @@
 
             toolbarHandlers : {
                 publish: function (cm, icon, cursor, selection) {
-                    const createAdForm = document.getElementById('createAdForm');
-                    event.preventDefault();
+                    const mdEditorForm = document.getElementById('mdEditorForm');
+                    const mdFormData = new FormData();
+                    const title = mdEditorForm.title.value;
+                    const author = mdEditorForm.author.value;
+                    const content = mdEditorForm.content.value;
+                    mdFormData.append('title', title);
+                    mdFormData.append('author', author);
+                    mdFormData.append('content', content);
 
-                    const adTitle = createAdForm.adTitle.value;
-                    const adImages = createAdForm.adImage.files;
-                    const adFeature = createAdForm.adFeature.value;
-
-                    const formData = new FormData();
-                    formData.append('adName', adTitle);
-                    formData.append('adFeature', adFeature);
-
-                    for (let i = 0; i < adImages.length; i++) {
-                        formData.append('adImages', adImages[i]);
-                    }
-
-                    fetch('/advertisements/create', {
+                    fetch('/article/publish', {
                         method: 'POST',
-                        body: formData
-                    })
-                        .then(response => response.json())  // 将响应解析为 JSON
-                        .then(adId => {
-                            mdEditorForm.method = "post";
-                            mdEditorForm.action = "/article/publish";
+                        body: mdFormData
+                    }).then(response => response.json())
+                        .then(data => {
+                            if (data.success) {
+                                const articleId = data.articleId; // 假设后端返回的文章ID字段为'articleId'
 
-                            const hiddenInput = document.createElement('input');
-                            hiddenInput.setAttribute('type', 'hidden');
-                            hiddenInput.setAttribute('name', 'ad_id');
-                            hiddenInput.setAttribute('value', adId);
-                            mdEditorForm.appendChild(hiddenInput);
+                                const createAdForm = document.getElementById('createAdForm');
+                                const adTitle = createAdForm.adTitle.value;
+                                const adImages = createAdForm.adImage.files;
+                                const adFeature = createAdForm.adFeature.value;
 
-                            mdEditorForm.submit();
+                                const adFormData = new FormData();
+                                adFormData.append('adName', adTitle);
+                                adFormData.append('adFeature', adFeature);
+                                adFormData.append('articleId', articleId); // 添加文章ID
+
+                                for (let i = 0; i < adImages.length; i++) {
+                                    adFormData.append('adImages', adImages[i]);
+                                }
+
+                                fetch('/advertisements/create', {
+                                    method: 'POST',
+                                    body: adFormData
+                                })
+                                    .then(response => response.json())
+                                    .then(adData => {
+                                        console.log('Ad created:', adData);
+                                    })
+                                    .catch(error => {
+                                        console.error('Error creating ad:', error);
+                                    });
+                            }
                         })
-                        .catch(error => {
-                            console.error('Error:', error);
-                        });
+                    // const createAdForm = document.getElementById('createAdForm');
+                    // event.preventDefault();
+                    //
+                    // const adTitle = createAdForm.adTitle.value;
+                    // const adImages = createAdForm.adImage.files;
+                    // const adFeature = createAdForm.adFeature.value;
+                    //
+                    // const formData = new FormData();
+                    // formData.append('adName', adTitle);
+                    // formData.append('adFeature', adFeature);
+                    //
+                    // for (let i = 0; i < adImages.length; i++) {
+                    //     formData.append('adImages', adImages[i]);
+                    // }
+                    //
+                    // fetch('/advertisements/create', {
+                    //     method: 'POST',
+                    //     body: formData
+                    // })
+                    //     .then(response => response.json())  // 将响应解析为 JSON
+                    //     .then(adId => {
+                    //         mdEditorForm.method = "post";
+                    //         mdEditorForm.action = "/article/publish";
+                    //
+                    //         const hiddenInput = document.createElement('input');
+                    //         hiddenInput.setAttribute('type', 'hidden');
+                    //         hiddenInput.setAttribute('name', 'ad_id');
+                    //         hiddenInput.setAttribute('value', adId);
+                    //         mdEditorForm.appendChild(hiddenInput);
+                    //
+                    //         mdEditorForm.submit();
+                    //     })
+                    //     .catch(error => {
+                    //         console.error('Error:', error);
+                    //     });
                 }
             }
         });
